# kmake

./: .gitignore  CMakeCommons.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.py  compile_commands.json  kmake  kmake.bat  kmake.py
src/kmake/: CMakeLists.txt
src/kmake/include/kmake/: kmake.hpp
src/kmake/src/: kmake.cpp
src/kmakelib/: CMakeLists.txt
src/kmakelib/include/kmakelib/: kmakelib.hpp
src/kmakelib/src/: kmakelib.cpp
